[ANCHOR-248] Renamed home_domain web_auth_domain in SEP10 and fix the createChallenge bug  (#828)
* 1. Renamed sep10.home_domain to sep10.web_auth_domain. 
* 2. Fixed createChallenge bug where the web_auth_domain should be used instead of the domain of hostURL